fixed BooksIssued page overflow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body {
-  height: 100vh;
-  width: 100vw;
+html, body, #root {
+  height: 100%;
+  width: 100%;
 }
